<resources>
    <string name="app_name">BidIT</string>
    <string name="dashboard_button">DASHBOARD</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="accept"><![CDATA[I accept T&C]]></string>
    <string name="submit">submit</string>
    <string name="error_email_input">Fill the input with a valid email address</string>
    <string name="error_phone_input">Fill the input with a phone number</string>
    <string name="error_is_accepted_input">Check should be accepted</string>
    <string name="continueWithGoogle">Continue with Google</string>
    <string name="or">or</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="menu_home">My products</string>
    <string name="menu_gallery">Dashboard</string>
    <string name="menu_slideshow">Favorites</string>

    <string name="home_second">Home Second</string>
    <string name="sign_out">Sign out</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="select">Select</string>
    <string name="take_picture">Take Picture</string>
    <string name="product_name">Product Name</string>
    <string name="product_color">Product Color</string>
    <string name="product_weight">Product Weight</string>
    <string name="product_price">Product Price</string>
    <string name="_0_ron">0 RON</string>
    <string name="save">Save</string>
    <string name="single_click">Single click</string>
    <string name="long_click">Long Click</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member">Already a member?</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="surname">Surname</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="e_mail">Email</string>
    <string name="email_address">Email Address</string>
    <string name="mail_address">Mail Address</string>
    <string name="profile">Profile</string>
    <string name="dies">###</string>
    <string name="reset_password">Reset Password</string>
    <string name="complete_with_the_email_you_want_us_to_receive_the_reset_link_to">Complete with the email you want us to receive the reset link to</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="title_activity_view_product">ViewProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="color_weight">Color / Weight</string>
    <string name="price">Price</string>

</resources>
