<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".addProduct.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_16">

        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/no_image_selected" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/gallery_photo"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/space_16"
                    android:onClick="btnTakePictureFromGalleryOnClick"
                    android:text="@string/select"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/take_picture"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="bntTakePictureFromCameraOnClick"
                    android:text="@string/select"
                    android:layout_marginLeft="@dimen/space_16"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/productNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16"
            android:hint="@string/product_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/productColorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16"
            android:hint="@string/product_color"
            android:inputType="text" />

        <EditText
            android:id="@+id/productWeightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16"
            android:hint="@string/product_weight"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/product_price"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:paddingStart="@dimen/space_16"
                android:paddingEnd="@dimen/space_16"
                android:text="@string/_0_ron"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5000"
            android:paddingTop="@dimen/space_16"
            android:paddingBottom="@dimen/space_8"
            android:progress="0" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:onClick="bntOnClick"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>