<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="100dp"
    tools:context=".login.ResetPasswordActivity">
    <TextView
        android:id="@+id/text_info"
        android:layout_width="212dp"
        android:layout_height="99dp"
        android:text="@string/complete_with_the_email_you_want_us_to_receive_the_reset_link_to"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="116dp"/>

    <EditText
        android:id="@+id/edittext_email_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="279dp"
        android:hint="@string/enter_your_email"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="189dp"
        android:layout_height="97dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="368dp" />

</LinearLayout>